<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>marketing</artifactId>
        <groupId>com.br.marketing</groupId>
        <version>1.0-SNAPSHOT</version>
        <relativePath>../pom.xml</relativePath>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>marketing-cs</artifactId>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-aop</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.springframework.data</groupId>
            <artifactId>spring-data-redis</artifactId>
            <version>1.7.2.RELEASE</version>
        </dependency>
        <dependency>
            <groupId>io.shardingsphere</groupId>
            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>io.shardingsphere</groupId>
            <artifactId>sharding-jdbc-spring-namespace</artifactId>
            <version>3.0.0</version>
        </dependency>
        <dependency>
            <groupId>mysql</groupId>
            <artifactId>mysql-connector-java</artifactId>
        </dependency>
        <dependency>
            <groupId>org.mybatis.spring.boot</groupId>
            <artifactId>mybatis-spring-boot-starter</artifactId>
            <version>1.1.1</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>druid</artifactId>
            <version>1.0.29</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>easyexcel</artifactId>
            <version>1.1.1-FIX</version>
        </dependency>
        <dependency>
            <artifactId>marketing-utils</artifactId>
            <version>1.0-SNAPSHOT</version>
            <groupId>com.br.marketing</groupId>
        </dependency>
        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>14.0.1</version>
        </dependency>
        <dependency>
            <groupId>com.br.bsf</groupId>
            <artifactId>bsf-ext</artifactId>
            <version>3.0.3</version>
        </dependency>
        <dependency>
            <groupId>com.br</groupId>
            <artifactId>user-center-new</artifactId>
            <version>2.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.apache.httpcomponents</groupId>
            <artifactId>httpclient</artifactId>
            <version>4.5.12</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.4</version>
        </dependency>
        <dependency>
            <groupId>javax.validation</groupId>
            <artifactId>validation-api</artifactId>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-validator</artifactId>
        </dependency>
        <dependency>
            <groupId>com.br.ice.service</groupId>
            <artifactId>alarm-rely-new</artifactId>
            <version>3.0.0-SNAPSHOT</version>
        </dependency>
<!--        <dependency>-->
<!--            <groupId>redis.clients</groupId>-->
<!--            <artifactId>jedis</artifactId>-->
<!--            <version>2.9.0</version>-->
<!--        </dependency>-->
<!--        <dependency>-->
<!--            <groupId>com.br.common</groupId>-->
<!--            <artifactId>redisengine</artifactId>-->
<!--            <version>1.0.0</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>com.brgroup</groupId>
            <artifactId>br-redis-client</artifactId>
            <version>1.0.4</version>
        </dependency>
        <dependency>
            <groupId>io.projectreactor</groupId>
            <artifactId>reactor-core</artifactId>
            <version>${reactor.version}</version>
        </dependency>
        <dependency>
            <groupId>com.br.ice.service</groupId>
            <artifactId>strategy-rely</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.br.ice.service</groupId>
            <artifactId>encode-mapping-rely</artifactId>
            <version>1.0.0</version>
        </dependency>
        <dependency>
            <groupId>com.jayway.jsonpath</groupId>
            <artifactId>json-path</artifactId>
        </dependency>
        <dependency>
            <groupId>net.minidev</groupId>
            <artifactId>asm</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.54</version>
        </dependency>
        <!-- pagehelper 分页插件 -->
        <dependency>
            <groupId>com.github.pagehelper</groupId>
            <artifactId>pagehelper-spring-boot-starter</artifactId>
            <version>1.3.1</version>
        </dependency>
        <dependency>
            <groupId>com.br.common</groupId>
            <artifactId>br-log</artifactId>
            <version>1.0.2</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
        </dependency>
        <dependency>
            <groupId>com.br.arch.geo</groupId>
            <artifactId>puslar-product-client</artifactId>
            <version>1.0.0</version>
            <exclusions>
                <exclusion>
                    <groupId>org.apache.logging.log4j</groupId>
                    <artifactId>log4j-slf4j-impl</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>org.slf4j</groupId>
                    <artifactId>slf4j-api</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.br</groupId>
            <artifactId>grpc-encode-mapping-rely</artifactId>
            <version>1.0.0</version>
            <classifier>shaded</classifier>
        </dependency>
        <dependency>
            <groupId>com.br.mom</groupId>
            <artifactId>grpc-broker-layer-api</artifactId>
            <version>1.0.0</version>
            <classifier>shaded</classifier>
        </dependency>
        <!--grpc 用户中心客户端-->
        <dependency>
            <groupId>com.br</groupId>
            <artifactId>grpc-user-center-rely</artifactId>
            <version>1.0.0</version>
            <classifier>shaded</classifier>
        </dependency>
        <dependency>
            <groupId>com.br</groupId>
            <artifactId>strategy-grpc</artifactId>
            <version>1.0.0</version>
            <classifier>shaded</classifier>
        </dependency>
        <dependency>
            <groupId>com.br.transfer</groupId>
            <artifactId>header-transfer-spring-boot-starter</artifactId>
            <version>1.0.5</version>
            <!-- 排除ribbon依赖 -->
            <exclusions>
                <exclusion>
                    <groupId>org.springframework.cloud</groupId>
                    <artifactId>spring-cloud-starter-ribbon</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.br.marketing.es</groupId>
            <artifactId>marketing-es-core</artifactId>
            <version>4.0.5-SNAPSHOT</version>
            <exclusions>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-classic</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>ch.qos.logback</groupId>
                    <artifactId>logback-access</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.br</groupId>
            <artifactId>br-grpc-common</artifactId>
            <version>1.0.6</version>
            <classifier>shaded</classifier>
        </dependency>
        <dependency>
            <groupId>com.br.cloud</groupId>
            <artifactId>spring_boot_exporter</artifactId>
            <version>1.1.2</version>
        </dependency>
        <!-- 众邦财富API SDK -->
        <dependency>
            <groupId>com.zbank</groupId>
            <artifactId>ZbAPISDKjdk6</artifactId>
            <version>4.1.2</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/sdk/zbank/ZbAPISDKjdk6-4.1.2.jar</systemPath>
        </dependency>
        <!-- 众邦财富文件SDK -->
        <dependency>
            <groupId>com.zbank</groupId>
            <artifactId>ZbFileSDKjdk6</artifactId>
            <version>2.1.7</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/sdk/zbank/ZbFileSDKjdk6-2.1.7.jar</systemPath>
        </dependency>
        <!-- 众邦财富安全工具 -->
        <dependency>
            <groupId>com.zbank</groupId>
            <artifactId>ZbSecurityTool</artifactId>
            <version>1.0.0</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/sdk/zbank/ZbSecurityTool-1.0.0.jar</systemPath>
        </dependency>
        <!-- 众邦财富工具 -->
        <dependency>
            <groupId>org.bouncycastle</groupId>
            <artifactId>bcprov-jdk15on</artifactId>
            <version>1.62</version>
            <scope>system</scope>
            <systemPath>${project.basedir}/src/main/resources/sdk/zbank/bcprov-jdk15on-1.62.jar</systemPath>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.7.0</version>
                <configuration>
                    <source>8</source>
                    <target>8</target>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>